<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <!-- TexView Title pelicula-->




    <TextView
        android:id="@+id/detailNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="30sp"
        android:hint="@string/movie_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        tools:layout_editor_absoluteX="47dp" />

    <!-- TexView Año Pelicula -->


    <TextView
        android:id="@+id/anoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ano_movie"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.149" />

    <!-- TexView Poster Pelicula -->

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/poster"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.261" />

    <TextView
        android:id="@+id/sinopsisTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sinopsis"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/duracionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/duracion"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anoTextView"
        app:layout_constraintVertical_bias="0.423"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/directorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anoTextView"
        app:layout_constraintVertical_bias="0.567"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/generoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genero"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anoTextView"
        app:layout_constraintVertical_bias="0.733"
        tools:layout_editor_absoluteX="44dp" />

    <TextView
        android:id="@+id/paisTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pais"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anoTextView"
        app:layout_constraintVertical_bias="0.908"
        tools:layout_editor_absoluteX="29dp" />


</androidx.constraintlayout.widget.ConstraintLayout>