<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameMovieTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/cardview_light_background"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/movie_name"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/anoMovieTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:background="@color/cardview_light_background"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/ano_movie"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/posterImageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/poster"
        android:textSize="30dp"/>


</LinearLayout>